feat: get system usage
